[gd_scene load_steps=17 format=3 uid="uid://dgautui580b6x"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_3uuo0"]
[ext_resource type="Texture2D" uid="uid://cjgqndr56bkmk" path="res://art/menu_bg_0.png" id="2_xmvy1"]
[ext_resource type="Texture2D" uid="uid://l0khv5mevpai" path="res://art/menu_bg_1.png" id="3_nwt03"]
[ext_resource type="Texture2D" uid="uid://v1sualcmsf62" path="res://art/xbutton.png" id="3_xd1ji"]
[ext_resource type="Texture2D" uid="uid://ifa51bognl5u" path="res://art/menubutton.png" id="4_15o60"]
[ext_resource type="Texture2D" uid="uid://c7ubfifad07vs" path="res://art/menu_bg_2.png" id="4_v1a5p"]
[ext_resource type="FontFile" uid="uid://demx0aaebdrhf" path="res://font/cookie/Cookie-Regular.ttf" id="5_7dwut"]
[ext_resource type="FontFile" uid="uid://e2hvpt36yn1p" path="res://font/big_bottom_cartoon/Big Bottom Cartoon.ttf" id="8_u0njc"]
[ext_resource type="Texture2D" uid="uid://cbqmp7al4ytfv" path="res://art/ball1.png" id="9_pj15p"]
[ext_resource type="Texture2D" uid="uid://c1ur2ovwbcrje" path="res://art/ball3.png" id="10_lublq"]
[ext_resource type="Texture2D" uid="uid://dywncqvu0afyp" path="res://art/ball8.png" id="11_nv65f"]
[ext_resource type="PackedScene" uid="uid://k1ptx6tvrs4n" path="res://ball_prop.tscn" id="12_3a6sx"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_g21fj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_472qo"]

[sub_resource type="Gradient" id="Gradient_cc2bt"]
offsets = PackedFloat32Array(0, 0.425806, 0.754839, 0.974194, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_s86up"]
gradient = SubResource("Gradient_cc2bt")
width = 1801

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3uuo0")

[node name="MainMenuSelectionScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Background_Rear" type="TextureRect" parent="MainMenuSelectionScreen"]
layout_mode = 0
offset_left = -86.0
offset_top = -76.0
offset_right = 3914.0
offset_bottom = 3924.0
scale = Vector2(0.337125, 0.207)
texture = ExtResource("2_xmvy1")

[node name="Background_1" type="TextureRect" parent="MainMenuSelectionScreen"]
layout_mode = 0
offset_left = -1989.0
offset_top = -1988.0
offset_right = 2011.0
offset_bottom = 2012.0
scale = Vector2(0.869, 0.869)
pivot_offset = Vector2(2000, 2000)
texture = ExtResource("3_nwt03")

[node name="Background_2" type="TextureRect" parent="MainMenuSelectionScreen"]
layout_mode = 0
offset_left = -1993.0
offset_top = -1996.0
offset_right = 2007.0
offset_bottom = 2004.0
rotation = -2.75238
scale = Vector2(0.869, 0.869)
pivot_offset = Vector2(2000, 2000)
texture = ExtResource("4_v1a5p")

[node name="ExitButton" type="TextureButton" parent="MainMenuSelectionScreen"]
layout_mode = 0
offset_left = 1034.0
offset_top = 41.0
offset_right = 1290.0
offset_bottom = 297.0
scale = Vector2(0.307464, 0.307464)
texture_normal = ExtResource("3_xd1ji")
stretch_mode = 0

[node name="MenuOptions" type="Control" parent="MainMenuSelectionScreen"]
anchors_preset = 0
offset_left = 580.0
offset_top = 386.0
offset_right = 580.0
offset_bottom = 386.0

[node name="PlayButton" type="TextureButton" parent="MainMenuSelectionScreen/MenuOptions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -24.0
offset_right = 143.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_15o60")
stretch_mode = 0

[node name="ButtonText" type="RichTextLabel" parent="MainMenuSelectionScreen/MenuOptions/PlayButton"]
layout_mode = 0
offset_left = -1.0
offset_top = 9.0
offset_right = 284.0
offset_bottom = 63.0
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/normal_font = ExtResource("5_7dwut")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]Play[/center]"

[node name="OptionsButton" type="TextureButton" parent="MainMenuSelectionScreen/MenuOptions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = 36.0
offset_right = 143.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_15o60")
stretch_mode = 0

[node name="ButtonText" type="RichTextLabel" parent="MainMenuSelectionScreen/MenuOptions/OptionsButton"]
layout_mode = 0
offset_left = 4.0
offset_top = 8.0
offset_right = 289.0
offset_bottom = 62.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("5_7dwut")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]Options[/center]"

[node name="LeaderboardButton" type="TextureButton" parent="MainMenuSelectionScreen/MenuOptions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = 96.0
offset_right = 143.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_15o60")
stretch_mode = 0

[node name="ButtonText" type="RichTextLabel" parent="MainMenuSelectionScreen/MenuOptions/LeaderboardButton"]
layout_mode = 0
offset_left = -1.0
offset_top = 8.0
offset_right = 284.0
offset_bottom = 62.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("5_7dwut")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]Leaderboard[/center]"

[node name="Credits" type="TextureButton" parent="MainMenuSelectionScreen/MenuOptions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = 156.0
offset_right = 143.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_15o60")
stretch_mode = 0

[node name="ButtonText" type="RichTextLabel" parent="MainMenuSelectionScreen/MenuOptions/Credits"]
layout_mode = 0
offset_left = -1.0
offset_top = 8.0
offset_right = 284.0
offset_bottom = 62.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("5_7dwut")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]Credits[/center]"

[node name="Logout" type="TextureButton" parent="MainMenuSelectionScreen/MenuOptions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -541.0
offset_top = 164.0
offset_right = -256.0
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.70874, 0.70874)
texture_normal = ExtResource("4_15o60")
stretch_mode = 0
metadata/_edit_group_ = true

[node name="ButtonText" type="RichTextLabel" parent="MainMenuSelectionScreen/MenuOptions/Logout"]
layout_mode = 0
offset_left = -1.0
offset_top = 8.0
offset_right = 284.0
offset_bottom = 62.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("5_7dwut")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]Logout[/center]"

[node name="GameTitle" type="RichTextLabel" parent="MainMenuSelectionScreen"]
layout_mode = 1
offset_left = 210.0
offset_top = 147.0
offset_right = 948.0
offset_bottom = 372.0
pivot_offset = Vector2(368, 78.84)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("8_u0njc")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center]Drop Game[/center]"

[node name="FoodItems" type="Control" parent="MainMenuSelectionScreen"]
anchors_preset = 0
offset_left = 118.0
offset_top = 410.0
offset_right = 327.0
offset_bottom = 619.0

[node name="ShelfSprite" type="ColorRect" parent="MainMenuSelectionScreen/FoodItems"]
layout_mode = 0
offset_left = -169.0
offset_top = 200.0
offset_right = 1068.0
offset_bottom = 289.0
color = Color(1, 0.847059, 1, 1)

[node name="Food_1" type="TextureRect" parent="MainMenuSelectionScreen/FoodItems"]
visible = false
layout_mode = 0
scale = Vector2(0.525, 0.525)
texture = ExtResource("9_pj15p")

[node name="Food_2" type="TextureRect" parent="MainMenuSelectionScreen/FoodItems"]
visible = false
layout_mode = 0
offset_left = 86.0
offset_top = 51.0
offset_right = 342.0
offset_bottom = 307.0
scale = Vector2(0.525, 0.525)
pivot_offset = Vector2(128, 128)
texture = ExtResource("10_lublq")
flip_h = true

[node name="Food_3" type="TextureRect" parent="MainMenuSelectionScreen/FoodItems"]
visible = false
layout_mode = 0
offset_left = 659.0
offset_top = 32.0
offset_right = 915.0
offset_bottom = 288.0
scale = Vector2(0.525, 0.525)
pivot_offset = Vector2(128, 128)
texture = ExtResource("11_nv65f")

[node name="RiceBallProp" parent="MainMenuSelectionScreen/FoodItems" instance=ExtResource("12_3a6sx")]
position = Vector2(224, 166)
ball_type = 3
flip_sprite = true

[node name="SaladProp" parent="MainMenuSelectionScreen/FoodItems" instance=ExtResource("12_3a6sx")]
position = Vector2(920, 164)

[node name="IceCreamProp" parent="MainMenuSelectionScreen/FoodItems" instance=ExtResource("12_3a6sx")]
position = Vector2(761, 165)
ball_type = 8

[node name="ShelfFloor" type="StaticBody2D" parent="MainMenuSelectionScreen/FoodItems"]
position = Vector2(-804, 246)
scale = Vector2(2.88, 1)
physics_material_override = SubResource("PhysicsMaterial_g21fj")

[node name="Hitbox" type="CollisionShape2D" parent="MainMenuSelectionScreen/FoodItems/ShelfFloor"]
position = Vector2(669, 2)
scale = Vector2(47.7844, -1.68772)
shape = SubResource("RectangleShape2D_472qo")

[node name="DarkScreen" type="TextureRect" parent="MainMenuSelectionScreen"]
visible = false
layout_mode = 0
offset_right = 1801.0
offset_bottom = 1024.0
scale = Vector2(0.648153, 0.639121)
mouse_filter = 2
texture = SubResource("GradientTexture1D_s86up")

[connection signal="pressed" from="MainMenuSelectionScreen/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="MainMenuSelectionScreen/MenuOptions/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenuSelectionScreen/MenuOptions/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MainMenuSelectionScreen/MenuOptions/LeaderboardButton" to="." method="_on_leaderboard_button_pressed"]
[connection signal="pressed" from="MainMenuSelectionScreen/MenuOptions/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MainMenuSelectionScreen/MenuOptions/Logout" to="." method="_on_logout_pressed"]
